// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color picker with a color passed in 1`] = `
<div
  className="color-input-container"
>
  <div
    className="color-circle"
    style={
      Object {
        "backgroundColor": "#000000",
      }
    }
  />
  <div>
    {"color":"#000000","colors":["#000000","#FFFFFF","#B80000","#DB3E00","#FCCB00","#008B02","#006B76","#1273DE","#004DCF","#5300EB","#EB9694","#FAD0C3","#FEF3BD","#C1E1C5","#BEDADC","#C4DEF6","#BED3F3","#D4C4FB","#3D4B54","#001528","#008860","#004437","#EE104E","#A5F944","#003366","#F6A230","#4F054F","#008000","#0000FF","#FFFF00"],"width":"75%","triangle":"hide"}
  </div>
</div>
`;

exports[`Color picker with a new color passed in 1`] = `
<div
  className="color-input-container"
>
  <div
    className="color-circle"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <div>
    {"color":"#ffffff","colors":["#000000","#FFFFFF","#B80000","#DB3E00","#FCCB00","#008B02","#006B76","#1273DE","#004DCF","#5300EB","#EB9694","#FAD0C3","#FEF3BD","#C1E1C5","#BEDADC","#C4DEF6","#BED3F3","#D4C4FB","#3D4B54","#001528","#008860","#004437","#EE104E","#A5F944","#003366","#F6A230","#4F054F","#008000","#0000FF","#FFFF00"],"width":"75%","triangle":"hide"}
  </div>
</div>
`;
